<resources>
    <string name="app_name">BookStore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="san_pham_moi">Sản phẩm mới</string>
    <string name="them_gio_hang">Thêm vào giỏ hàng</string>
    <string name="gio_hang_trong">Giỏ hàng trống</string>
    <string name="tong_tien">Tổng :</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="nhap_sdt"><font size="15">Nhập số điện thoại (tên đăng nhập)</font></string>
    <string name="nhap_mk"><font size="15">Nhập mật khẩu</font></string>
    <string name="nhap_ten"><font size="15">Nhập họ và tên</font></string>
    <string name="nhap_dc"><font size="15">Nhập địa chỉ</font></string>
    <string name="dang_ky">Đăng ký</string>
    <string name="dang_ky_nhanh">Đăng ký nhanh</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="ghi_nho_dang_nhap">Ghi nhớ đăng nhập</string>
    <string name="lien_he">Liên hệ</string>
    <string name="nhap_so_luong">Nhập số lượng</string>
    <string name="cong">+</string>
    <string name="tru">-</string>
    <string name="thong_tin_khach_hang">THÔNG TIN KHÁCH HÀNG</string>
    <string name="thong_tin_lien_he">THÔNG TIN LIÊN HỆ</string>
    <string name="lien_he_intro">Quý khách có nhu cầu liên hệ, trao đổi hoặc đóng góp ý kiến, vui lòng tham khảo các thông tin sau:</string>
    <string name="lien_he_sdt_l">Liên hệ qua điện thoại: </string>
    <string name="lien_he_sdt_r">0965707573</string>
    <string name="lien_he_email_l">Liên hệ qua email: </string>
    <string name="lien_he_email_r">hoang.nam@bookstore.com</string>
    <string name="lien_he_diachi_l">Địa chỉ cửa hàng: </string>
    <string name="lien_he_diachi_r">Số 1 , đường 3/2 , quận Ninh Kiều , TP.Cần Thơ</string>
    <string name="doi_mk">Thay đổi mật khẩu</string>
    <string name="doi_thong_tin">Thay đổi thông tin</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="sdt">Số điện thoại (Tên truy cập)</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="tac_gia">Tác giả : </string>
    <string name="nam_xb">Năm xuất bản : </string>
    <string name="nha_xb">Nhà xuất bản : </string>
    <string name="so_trang">Số trang : </string>
    <string name="gia">Giá : </string>
    <string name="so_luong">Số lượng : </string>
    <string name="dat_hang">Đặt hàng</string>
    <string name="tiep_tuc_mua_hang">Tiếp tục mua hàng </string>
    <string name="thoi_gian_mua">Thời gian mua hàng : </string>
    <string name="ngay_lap_don">Ngày lập đơn hàng</string>
    <string name="hoa_don">Hóa đơn : </string>
    <string name="cam_on">Cảm ơn đã đặt hàng ở BOOK STORE</string>
    <string name="tat_ca_sp">Tất cả sản phẩm</string>
    <string name="tim_kiem_sach"><font size="14">Nhập tên sách , tác giả , thể loại cần tìm </font></string>
    <string name="the_loai">Thể loại : </string>
    <string name="lich_su_mua_hang">Lịch sử mua hàng</string>
    <string name="con_hang">CÒN HÀNG</string>
    <string name="het_hang">HẾT HÀNG</string>
    <string name="sap_het_hang">SẮP HẾT HÀNG</string>
    <string name="lich_su_trong">Lịch sử trống</string>
    <string name="mk_cu"><font size="15">Nhập mật khẩu cũ</font></string>
    <string name="mk_moi"><font size="15">Nhập mật khẩu mới</font></string>
    <string name="mk_moi_conf"><font size="15">Nhập lại mật khẩu mới</font></string>
    <string name="ma_don_hang">Mã đơn hàng</string>
    <string name="ten_nguoi_nhan">Họ tên người nhận</string>
    <string name="sdt_nguoi_nhan">Số điện thoại người nhận</string>
    <string name="dia_chi_nguoi_nhan">Địa chỉ người nhận</string>
    <string name="gio_hang_cua_ban">Giỏ hàng của bạn</string>
    <string name="tinh_trang_don_hang">Tình trạng đơn hàng</string>
    <string name="tong_gia_tri">Tổng giá trị đơn hàng</string>
    <string name="chua_co_don_hang">Chưa có đơn hàng nào</string>
    <string name="cus_ma_don_hang">Mã đơn hàng : </string>
    <string name="trang_thai_don_hang">Trạng thái đơn hàng : </string>
    <string name="gui_nhan_xet">Gửi nhận xét</string>
</resources>
