<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="470dp"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/margin_5dp"
    android:paddingBottom="@dimen/margin_10dp">

    <TextView
        android:id="@+id/txtContact_Thoat"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="X"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/thong_tin_lien_he"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_5dp"
            android:background="@drawable/border_book_detail"
            android:orientation="vertical"
            android:padding="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginBottom="@dimen/margin_30dp"
                android:text="@string/lien_he_intro"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_17sp"
                android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lien_he_sdt_l"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_17sp"
                    android:textStyle="bold" />

                <TextView
                    android:text="@string/lien_he_sdt_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_17sp" />


                <TextView
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lien_he_email_l"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_17sp"
                    android:textStyle="bold" />
                <TextView
                    android:text="@string/lien_he_email_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_17sp" />
            <TextView
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lien_he_diachi_l"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_17sp"
                android:textStyle="bold" />
            <TextView
                android:text="@string/lien_he_diachi_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_17sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>