<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dialog_add_cart_layout_width"
        android:layout_height="@dimen/dialog_add_cart_layout_height"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nhap_so_luong"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_add_cart_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_cong_tru_margin_top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNhap_Tru"
                android:layout_width="@dimen/btn_cong_tru_width"
                android:layout_height="@dimen/btn_cong_tru_height"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/tru"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_cong_tru_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNhap_SL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/btn_cong_tru_margin_left"
                android:layout_marginRight="@dimen/btn_cong_tru_margin_right"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_cong_tru_text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNhap_Cong"
                android:layout_width="@dimen/btn_cong_tru_width"
                android:layout_height="@dimen/btn_cong_tru_height"
                android:background="@color/colorPrimary"
                android:text="@string/cong"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_cong_tru_text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNhap_XN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dialog_btn_confirm_margin_top"
            android:background="@color/colorPrimary"
            android:text="@string/xac_nhan"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>