<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:layout_width="200dp"
            android:layout_height="150dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:background="@drawable/icon_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:maxLength="11"
                android:inputType="number"
                android:layout_gravity="center"
                android:id="@+id/txtLogin_SDT"
                android:hint="@string/nhap_sdt"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:background="@drawable/icon_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:maxLength="12"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:id="@+id/txtLogin_MK"
                android:hint="@string/nhap_mk"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbLogin"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:text="@string/ghi_nho_dang_nhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btnDangNhap"
                android:textColor="#FFF"
                android:background="@color/colorPrimary"
                android:text="@string/dang_nhap"
                android:layout_width="100dp"
                android:layout_height="50dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>