<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="@dimen/login_layout_width"
        android:layout_height="@dimen/login_layout_height"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/register_title_margin_bottom"
            android:layout_marginTop="@dimen/profile_title_margin_top"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/dang_ky_nhanh"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/profile_title_text_size"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:background="@drawable/icon_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:maxLength="11"
                android:inputType="number"
                android:layout_gravity="center"
                android:id="@+id/txtDialogRegister_SDT"
                android:hint="@string/nhap_sdt"
                android:layout_width="@dimen/login_text_width"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/login_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:background="@drawable/icon_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:maxLength="12"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:id="@+id/txtDialogRegister_MK"
                android:hint="@string/nhap_mk"
                android:layout_width="@dimen/login_text_width"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/login_btn_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/txtDialogRegister"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:text="@string/dang_ky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>