<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center">

    <LinearLayout
        android:gravity="center"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/logo" />

        <TextView
            android:layout_marginTop="@dimen/margin_5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cam_on"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ma_don_hang"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_15sp" />

            <TextView
                android:textColor="@color/red"
                android:id="@+id/txtInvoiceComp_MaHD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:textSize="@dimen/text_size_17sp" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngay_lap_don"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/margin_15dp" />

            <TextView
                android:textColor="@color/red"
                android:id="@+id/txtInvoiceComp_NgayLap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:textSize="@dimen/text_size_17sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>